# data-validation

./: .bazelrc  .gitignore  .pre-commit-config.yaml  404.html  43275.ipynb  BUILD  CONTRIBUTING.md  README.md  RELEASE.md  WORKSPACE  configure.sh  docker-compose.yml  index.html  mkdocs.yml  objects.inv  patch_wrapped_clang.sh  pyproject.toml  setup.cfg  setup.py
.github/reusable-build/: action.yml
.github/workflows/: build.yml  conda-build.yml  docs.yml  test.yml
anomalies/: index.html
api/: index.html
custom_data_validation/: index.html
docs/: api.md  custom_data_validation.md  index.md  install.md
examples/chicago_taxi/: chicago_taxi_tfdv.ipynb
examples/chicago_taxi/data/: eval.csv  serving.csv  train.csv
g3doc/: _toc.yaml  anomalies.md  custom_data_validation.md  get_started.md  index.md  install.md
g3doc/api_docs/python/: _toc.yaml  index.md  tfdv.md
get_started/: index.html
install/: index.html
search/: search_index.json
tensorflow_data_validation/: BUILD  __init__.py  build_macros.bzl  build_pip_package.sh  constants.py  data_validation.bzl  move_generated_files.sh  pip_installer.sh  pyarrow_tf.py  types.py  types_compat.py  types_test.py  version.py  workspace.bzl
tensorflow_data_validation/anomalies/: BUILD  bool_domain_test.cc  bool_domain_util.cc  bool_domain_util.h  custom_domain_util.cc  custom_domain_util.h  custom_domain_util_test.cc  custom_validation.cc  custom_validation.h  custom_validation_test.cc  dataset_constraints_util.cc  dataset_constraints_util.h  dataset_constraints_util_test.cc  diff_util.cc  diff_util.h  feature_statistics_validator.cc  feature_statistics_validator.h  feature_statistics_validator_test.cc  feature_util.cc  feature_util.h  feature_util_test.cc  features_needed.cc  features_needed.h  features_needed_test.cc  float_domain_test.cc  float_domain_util.cc  float_domain_util.h  image_domain_test.cc  image_domain_util.cc  image_domain_util.h  int_domain_test.cc  int_domain_util.cc  int_domain_util.h  internal_types.h  map_util.cc  map_util.h  map_util_test.cc  metrics.cc  metrics.h  metrics_test.cc  (+34 more)
tensorflow_data_validation/anomalies/proto/: BUILD  custom_validation_config.proto  feature_statistics_to_proto.proto  validation_config.proto  validation_metadata.proto
tensorflow_data_validation/api/: stats_api.py  stats_api_test.py  validation_api.py  validation_api_test.py  validation_options.py  validation_options_test.py
tensorflow_data_validation/arrow/: arrow_util.py  arrow_util_test.py  decoded_examples_to_arrow.py  decoded_examples_to_arrow_py_test.py  decoded_examples_to_arrow_test.py  merge.py  merge_test.py
tensorflow_data_validation/arrow/cc/: BUILD  arrow_util.cc  arrow_util.h  common.cc  common.h  decoded_examples_to_arrow.cc  decoded_examples_to_arrow.h  init_numpy.cc  init_numpy.h  macros.h  merge.cc  merge.h  pyarrow_numpy_stub.cc  pyarrow_numpy_stub.h
tensorflow_data_validation/coders/: csv_decoder.py  csv_decoder_test.py  decoder_test_util.py  tf_example_decoder.py  tf_example_decoder_test.py  tf_example_decoder_test_data.py
tensorflow_data_validation/coders/cc/: BUILD  fast_example_decoder.cc  fast_example_decoder.h
tensorflow_data_validation/integration_tests/: drift_skew_metrics_test.py  sequence_example_e2e_test.py
tensorflow_data_validation/pywrap/: BUILD  arrow.i  exported_symbols  fast_example_decoder.i  tensorflow_data_validation.i  tensorflow_data_validation_extension.cc  validation_api.i  validation_submodule.cc  validation_submodule.h  version_script.lds
tensorflow_data_validation/skew/: feature_skew_detector.py  feature_skew_detector_test.py
tensorflow_data_validation/skew/protos/: BUILD  feature_skew_results.proto  skew_config.proto
tensorflow_data_validation/statistics/: stats_impl.py  stats_impl_test.py  stats_options.py  stats_options_test.py
tensorflow_data_validation/statistics/generators/: basic_stats_generator.py  basic_stats_generator_test.py  common_stats_generator.py  common_stats_generator_test.py  cross_feature_stats_generator.py  cross_feature_stats_generator_test.py  empty_value_counter_generator.py  empty_value_counter_generator_test.py  image_stats_generator.py  image_stats_generator_test.py  input_batch.py  input_batch_test.py  lift_stats_generator.py  lift_stats_generator_test.py  mutual_information.py  mutual_information_test.py  natural_language_domain_inferring_stats_generator.py  natural_language_domain_inferring_stats_generator_test.py  natural_language_stats_generator.py  natural_language_stats_generator_test.py  numeric_stats_generator.py  numeric_stats_generator_test.py  partitioned_stats_generator.py  partitioned_stats_generator_test.py  sklearn_mutual_information.py  sklearn_mutual_information_test.py  sparse_feature_stats_generator.py  sparse_feature_stats_generator_test.py  stats_generator.py  string_stats_generator.py  string_stats_generator_test.py  time_stats_generator.py  time_stats_generator_test.py  top_k_stats_generator.py  top_k_stats_generator_test.py  top_k_uniques_combiner_stats_generator.py  top_k_uniques_combiner_stats_generator_test.py  top_k_uniques_sketch_stats_generator.py  (+7 more)
tensorflow_data_validation/tools/: BUILD  build_docs.py  strip_type_hints.py
tensorflow_data_validation/utils/: anomalies_util.py  anomalies_util_test.py  artifacts_io_impl.py  artifacts_io_impl_test.py  batch_util.py  batch_util_test.py  beam_runner_util.py  bin_util.py  bin_util_test.py  dashboard_util.py  dashboard_util_impl.py  display_util.py  display_util_test.py  example_weight_map.py  example_weight_map_test.py  feature_partition_util.py  feature_partition_util_test.py  io_util.py  io_util_test.py  metrics_util.py  mutual_information_util.py  mutual_information_util_test.py  path.py  preprocessing_util.py  profile_util.py  profile_util_test.py  quantiles_util.py  quantiles_util_test.py  schema_util.py  schema_util_test.py  slicing_util.py  slicing_util_test.py  statistics_io_impl.py  statistics_io_impl_test.py  statistics_io_test_util.py  stats_gen_lib.py  stats_gen_lib_test.py  stats_util.py  stats_util_test.py  test_util.py  (+9 more)
(+38 files in other folders)
